source/css/core/power_ui_core.css
body {
    margin: 0;
    padding: 0;
    overflow: hidden;
}

body, html {
  height: 100%;
}
#app-container {
    height: 100%;
    overflow: auto;
}
.window-is-maximized #app-container {
    overflow: hidden;
}

/*.pw-bar {
    border-width: 5px;
    border-style: solid;
    border-color: black;
}*/

/* Anime dialogs fade in*/
/*.pw-dialog-container {
    animation: pw-window 0.5s ease-in-out;
}

@keyframes pw-window {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}*/

.window-is-maximized .pw-small-window-mode .pw-window .pw-bar-fixed,
.window-is-maximized .pw-window .pw-bar-fixed.pw-ignore,
.pw-small-window-mode .pw-window .pw-bar-fixed.pw-ignore {
    visibility: hidden;
    /*display: none;*/
}

/* Dropdown */
.power-dropmenu, .power-dropmenu.power-active > .power-dropmenu {
    display: none !important;
}

.power-hide {
    visibility: hidden !important;
}
@media screen and (max-width: 768px) {
    .power-dropmenu > .power-dropmenu.power-active {
        margin-left: 0 !important;
        position: relative;
    }
}

.power-split-bar {
    overflow: auto;
    /*width: 100%;*/
    /*height: 100%;*/
}

.power-split-bar.pw-split.pw-left {
    border-right-width: 5px;
    border-right-style: solid;
}

.power-split-bar.pw-split.pw-right {
    border-left-width: 5px;
    border-left-style: solid;
}

.power-split-bar.pw-split.pw-top {
    border-bottom-width: 5px;
    border-bottom-style: solid;
}

.power-split-bar.pw-split.pw-bottom {
    border-top-width: 5px;
    border-top-style: solid;
}

.power-split-bar .power-list, .power-split-bar .power-item {
    white-space: nowrap;
}

/* power menu-break query*/
    .pw-bar-break .power-split-bar.pw-split.pw-left:not(.pw-bar-fixed) {
        border-right-style: none;
    }

    .pw-bar-break .power-split-bar.pw-split.pw-right:not(.pw-bar-fixed) {
        border-left-style: none;
    }

    .pw-bar-break .power-split-bar.pw-split.pw-top:not(.pw-bar-fixed) {
        border-bottom-style: none;
    }

    .pw-bar-break .power-split-bar.pw-split.pw-bottom:not(.pw-bar-fixed) {
        border-top-style: none;
    }

    .pw-bar-break .power-split-bar.pw-bar.pw-horizontal.pw-colapse.power-active:not(.pw-bar-fixed) .pw-bar-content,
    .pw-bar-break .power-split-bar.pw-bar.pw-vertical.pw-colapse.power-active:not(.pw-bar-fixed) .pw-bar-content  {
        display: block;
        width: max-content;
    }

    .pw-bar-break .power-split-bar.pw-bar.pw-horizontal.pw-colapse:not(.pw-bar-fixed) .pw-bar-content,
    .pw-bar-break .power-split-bar.pw-bar.pw-vertical.pw-colapse:not(.pw-bar-fixed) .pw-bar-content {
        display: none;
    }
/* power menu-break query*/

/* power menu-break query*/
    .pw-bar-break .power-dropmenu > .power-dropmenu.power-active {
        margin-left: 0 !important;
        position: relative;
    }
/* power menu-break query*/

/* Dropdown end */
/* Menu */
.pw-bar.pw-horizontal > *,
.pw-bar.pw-vertical > * {
    display: inline-block;
}
.pw-bar.pw-vertical > .power-action, .pw-bar.pw-vertical > .power-item, .pw-bar.pw-vertical > .power-brand {
    display: block;
}
.pw-bar.pw-vertical {
    display: inline-block;
}
.power-active > .power-item, .power-active > .power-action, .power-active > .power-brand {
    display: block;
}

.pw-bar.pw-horizontal.pw-colapse .power-toggle,
.pw-bar.pw-vertical.pw-colapse .power-toggle,
.pw-bar.pw-icons-bar .power-toggle {
    display: none;
}
.pw-bar.pw-icons-bar.pw-show-toggle.pw-horizontal > .power-toggle {
    display: block;
    margin-right: 0.25em;
    margin-left: auto;
}
.pw-bar.pw-icons-bar.pw-show-toggle.pw-vertical > .power-toggle {
    display: block;
    margin-bottom: 0.25em;
}

.pw-bar.pw-icons-bar.pw-horizontal, .pw-bar.pw-icons-bar.pw-horizontal.pw-show-toggle {
    display: flex;
    align-items: center;
}
.pw-bar.pw-icons-bar.pw-vertical, .pw-bar.pw-icons-bar.pw-vertical.pw-show-toggle {
    display: block;
}

.pw-bar.pw-icons-bar.pw-show-toggle.power-active.pw-vertical > .power-item,
.pw-bar.pw-icons-bar.pw-show-toggle.power-active.pw-vertical > .power-action {
    display: inline-block;
}

.pw-bar.pw-icons-bar.pw-show-toggle.power-active {
    display: block;
    justify-content: initial;
}

.pw-bar.pw-icons-bar.pw-show-toggle.power-active > .power-toggle {
    display: none;
}

.pw-bar.pw-icons-bar.pw-show-toggle.power-active.pw-horizontal > .power-item,
.pw-bar.pw-icons-bar.pw-show-toggle.power-active.pw-horizontal > .power-action {
    display: inline-block;
}

.pw-bar.pw-icons-bar.pw-show-toggle > .power-item:not(.pw-force-show),
.pw-bar.pw-icons-bar.pw-show-toggle > .power-action:not(.pw-force-show) {
    visibility: hidden;
    /*display: none;*/
}
.pw-mirrored .power-dropmenu, .pw-bar.pw-mirrored {
    text-align: right;
}

.power-dropmenu.power-active, .power-dropmenu.power-active > .power-dropmenu.power-active {
    display: block !important;
    white-space: nowrap;
    position: absolute;
}

/* start power tree view */
.power-tree-view .power-tree-view {
    padding-left: 1em;
}
.power-tree-view, .power-tree-view .power-item, .power-tree-view .power-tree-view, .power-tree-view .power-list {
    display: block;
    cursor: pointer;
}

.power-tree-view .power-tree-view {
    display: none;
}
.power-tree-view .power-tree-view.power-active {
    display: block;
}

/* end power tree view*/

/*.pw-bar.pw-horizontal {
    display: flex;
    align-items: center;
    /*min-height: 40px;*/
}*/

/* toolbar pw-icons-bar */
.pw-bar.pw-icons-bar {
    max-width: 100%;
    min-width: 100%;
    width: 100%;
}
/* ... */

